# LogJangler

./: .gitignore  Cargo.toml  Makefile  README.md  STATUS.md  docker-compose.yml
crates/logjangler-cli/: Cargo.toml
crates/logjangler-cli/src/: main.rs
crates/logjangler-consumers/: Cargo.toml
crates/logjangler-consumers/src/: main.rs
crates/logjangler-core/: Cargo.toml
crates/logjangler-core/src/: config.rs  error.rs  events.rs  lib.rs  plugins.rs
crates/logjangler-plugins/: Cargo.toml
crates/logjangler-plugins/src/: lib.rs
crates/logjangler-plugins/src/repls/: mod.rs
crates/logjangler-service/: Cargo.toml
crates/logjangler-service/src/: main.rs
