[package]
name = "logjangler-plugins"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
logjangler-core = { path = "../logjangler-core" }
tokio = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
